nixidy/generated/prod/maloja/HTTPRoute-maloja.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: maloja
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: maloja
  name: maloja
  namespace: media
spec:
  hostnames:
    - maloja.trdos.me
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: maloja
          namespace: media
          port: 42010
          weight: 1
